# corgi

./: .coveragerc  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  launch.py  pyproject.toml  tiara-stratified-tune-macc10M.sqlite3  tiara-stratified-tune3.sqlite3  tiara-stratified-tune4.sqlite3  tune.sh
.github/workflows/: docs.yml
corgi/: __init__.py  apps.py  cli.py  data.py  dataloaders.py  models.py  optimization.py  preprocessing.py  profiling.py  refseq.py  tensor.py  training.py  transforms.py  tuning.py
corgi/outs/: plant.csv  plant.csv.prof
docs/: api.rst  cli.rst  conf.py  credits.rst  index.rst
tests/: test_apps.py  test_cli.py  test_dataloaders.py  test_models.py  test_refseq.py  test_tensor.py  test_training.py  test_transforms.py
tests/expected/TestCorgi/test_cli/: show-batch_help.yaml  train_help.yaml  tune_help.yaml
tests/expected/TestCorgi/test_metrics/: metrics_default.yaml
tests/expected/TestCorgi/test_model/: model_default.yaml
tests/expected/TestCorgi/test_pretrained_location/: pretrained_location_default.yaml
tests/testdata/: mitochondrion.h5  plastid.h5
