[tool.poetry]
name = "corgi"
version = "0.1.0"
description = "Classifier for ORganelle Genomes"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.79"
fastai = "^2.4.1"
dask = "^2021.7.1"
progressbar2 = "^3.53.1"
h5py = "^3.1.0"
humanize = "^3.10.0"
pyarrow = "^4.0.1"
typer = "^0.3.2"
plotly = "^5.3.1"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.10.0"
httpx = "^0.20.0"
wandb = "^0.12.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipykernel = "^6.0.3"
nbdev = "^1.1.19"
coverage = "^5.5"
pre-commit = "^2.14.0"
snakeviz = "^2.1.1"


[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
corgi = 'corgi.cli:app'